# LocalSync

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-release.yml
debian/: changelog  control  copyright  localsync.install  localsync.postinst  rules
src/client/: __init__.py  cli.py  client.py  network.py  package_manager.py  service_discovery.py
src/lib/: cache.py  data.py  lib.py  logger.py
src/server/: __init__.py  api_routes.py  app_config.py  mdns_service.py  network_utils.py  server.py
