[project]
name = "localsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "netifaces>=0.11.0",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "types-requests>=2.32.4.20250913",
    "types-tabulate>=0.9.0.20241207",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
    "zeroconf>=0.148.0",
]
